@@ -2,6 +2,7 @@ Revision history Bot::BasicBot
 
 {{$NEXT}}
   - Ignore empty strings returned by said()
+  - Adjust the method documentation a bit to avoid confusion
 
 0.83  Fri Nov 5 12:40:00 CET 2010
   - Applied patch from Mario Domgörgen to use log() for warnings (RT #51804)
